--- a/WebBlogCaNhan_Web2/src/main/resources/templates/views/register.html
+++ b/WebBlogCaNhan_Web2/src/main/resources/templates/views/register.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Login Form</title>
+<title>Regiter</title>
 <!-- Link đến file CSS -->
 <link rel="stylesheet" href="css/login.css" />
 <!-- Google font -->
@@ -15,21 +15,27 @@
       <img src="image/Blog-Logo.png" alt="Logo Blog" />
     </div>
     <div class="subtitle" aria-label="Mô tả">Chia sẻ khoảnh khắc cuộc sống</div>
-    <form>
-      <div class="input-group">
-        <input type="text" name="username" placeholder="Tên đăng nhập" aria-label="Tên đăng nhập" />
-      </div>
-      <div class="input-group">
-        <input type="password" name="password" placeholder="Mật khẩu" aria-label="Mật khẩu" />
-      </div>
-       <div class="input-group">
-        <input type="password" name="password" placeholder="Nhập lại mật khẩu" aria-label="Nhập lại mật khẩu" />
-      </div>
-      <button type="submit" class="btn-login" aria-label="Đăng nhập">Đăng ký</button>
-    </form>
-    <div class="register">
-      <a href="#" aria-label="Đăng ký">Đăng nhập</a>
-    </div>
+    <form method="post" action="/register">
+    
+     <div th:if="${error}" style="color: red; text-align: center;">
+    <p th:text="${error}"></p>
+  </div>
+    
+  <div class="input-group">
+    <input type="text" name="username" placeholder="Tên đăng nhập" required />
+  </div>
+  <div class="input-group">
+    <input type="password" name="password" placeholder="Mật khẩu" required />
+  </div>
+  <div class="input-group">
+    <input type="password" name="confirmPassword" placeholder="Nhập lại mật khẩu" required />
+  </div>
+  <button type="submit" class="btn-login">Đăng ký</button>
+</form>
+
+<div class="register">
+  <a href="/login">Đăng nhập</a>
+</div>
   </div>
 </body>
 </html>
