--- a/WebBlogCaNhan_Web2/src/main/resources/templates/views/createblog.html
+++ b/WebBlogCaNhan_Web2/src/main/resources/templates/views/createblog.html
@@ -25,26 +25,25 @@
 <div class="main-content" id="mainContent">
   <!-- Nội dung chính được gom trong 1 div nhỏ hơn -->
   <div class="content-wrapper">
-   <form th:action="@{/posts/create}" method="post" class="post-form">
-  <input type="text" class="form-title" name="title" th:field="*{title}" placeholder="Title">
+  <form th:action="@{/posts/create}" method="post" class="post-form">
+  <input type="text" class="form-title" name="title" placeholder="Title">
 
-  <div class="form-selects">
-    <select class="form-select" name="categoryId" th:field="*{categoryId}">
-      <option disabled selected>Chủ đề</option>
-      <option th:each="c : ${categories}" th:value="${c.ID}" th:text="${c.name}"></option>
-    </select>
+  <select class="form-select" name="categoryId">
+    <option value="" disabled selected>Chủ đề</option>
+    <option th:each="c : ${categories}" th:value="${c.id}" th:text="${c.name}"></option>
+  </select>
 
-    <select class="form-select" name="mode" th:field="*{mode}">
-      <option disabled selected>Trạng thái</option>
-      <option value="PUBLIC">Công khai</option>
-      <option value="PRIVATE">Riêng tư</option>
-    </select>
-  </div>
+  <select class="form-select" name="mode">
+    <option value="" disabled selected>Trạng thái</option>
+    <option value="PUBLIC">Công khai</option>
+    <option value="PRIVATE">Riêng tư</option>
+  </select>
 
-  <textarea class="form-content" rows="6" name="content" th:field="*{content}" placeholder="Nhập nội dung..."></textarea>
+  <textarea class="form-content" rows="6" name="content" placeholder="Nhập nội dung..."></textarea>
 
   <button class="btn-submit" type="submit">ĐĂNG BÀI</button>
 </form>
+
 
     
   </div>
