--- a/WebBlogCaNhan_Web2/src/main/resources/templates/views/createblog.html
+++ b/WebBlogCaNhan_Web2/src/main/resources/templates/views/createblog.html
@@ -7,10 +7,14 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Island+Moments&display=swap" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
-    <link href="css/home.css" rel="stylesheet">
-    <link href="css/createblog.css" rel="stylesheet">
-    <script src="/js/tinymce/tinymce.min.js"></script>
+  <link th:href="@{/css/style.css}" rel="stylesheet" />
+<link th:href="@{/css/home.css}" rel="stylesheet" />
+<link th:href="@{/css/createblog.css}" rel="stylesheet" />
+
+<script th:src="@{/js/tinymce/tinymce.min.js}"></script>
+<script th:src="@{/js/menu.js}"></script>
+<script th:src="@{/js/richtext.js}"></script>
+
 </head>
 <body>
 
@@ -27,18 +31,18 @@
   <div class="content-wrapper">
   <form th:action="@{/posts/create}" method="post" class="post-form">
   <input type="text" class="form-title" name="title" placeholder="Title">
-
+<div class="form-selects">
   <select class="form-select" name="categoryId">
     <option value="" disabled selected>Chủ đề</option>
-    <option th:each="c : ${categories}" th:value="${c.id}" th:text="${c.name}"></option>
+    <option th:each="c : ${categories}" th:value="${c.ID}" th:text="${c.category_name}"></option>
   </select>
 
   <select class="form-select" name="mode">
     <option value="" disabled selected>Trạng thái</option>
-    <option value="PUBLIC">Công khai</option>
-    <option value="PRIVATE">Riêng tư</option>
+    <option value="CONG_KHAI">Công khai</option>
+    <option value="RIENG_TU">Riêng tư</option>
   </select>
-
+ </div>
   <textarea class="form-content" rows="6" name="content" placeholder="Nhập nội dung..."></textarea>
 
   <button class="btn-submit" type="submit">ĐĂNG BÀI</button>
@@ -48,9 +52,6 @@
     
   </div>
 </div>
-
-  <script src="/js/menu.js"></script>
-  <script src="/js/richtext.js"></script>
   
 </body>
 </html>
