--- a/WebBlogCaNhan_Web2/src/main/resources/templates/views/createblog.html
+++ b/WebBlogCaNhan_Web2/src/main/resources/templates/views/createblog.html
@@ -29,7 +29,7 @@
 <div class="main-content" id="mainContent">
   <!-- Nội dung chính được gom trong 1 div nhỏ hơn -->
   <div class="content-wrapper">
-  <form th:action="@{/posts/create}" method="post" class="post-form">
+  <form th:action="@{/blog/create}" method="post" class="post-form">
   <input type="text" class="form-title" name="title" placeholder="Title">
 <div class="form-selects">
   <select class="form-select" name="categoryId">
