--- a/WebBlogCaNhan_Web2/src/main/resources/templates/views/home.html
+++ b/WebBlogCaNhan_Web2/src/main/resources/templates/views/home.html
@@ -7,8 +7,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Island+Moments&display=swap" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
-     <link href="css/home.css" rel="stylesheet">
+  <link th:href="@{/css/style.css}" rel="stylesheet" />
+	<link th:href="@{/css/home.css}" rel="stylesheet" />
+
 </head>
 <body>
 
