--- a/WebBlogCaNhan_Web2/src/main/resources/templates/views/register.html
+++ b/WebBlogCaNhan_Web2/src/main/resources/templates/views/register.html
@@ -5,17 +5,17 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Regiter</title>
 <!-- Link đến file CSS -->
-<link rel="stylesheet" href="css/login.css" />
+<link rel="stylesheet" th:href="@{/css/login.css}">
 <!-- Google font -->
 <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet" />
 </head>
 <body>
   <div class="login-container" role="main">
     <div class="logo" aria-label="Logo Blog">
-      <img src="image/Blog-Logo.png" alt="Logo Blog" />
+       <img th:src="@{/image/Blog-Logo.png}" alt="Logo Blog" />
     </div>
     <div class="subtitle" aria-label="Mô tả">Chia sẻ khoảnh khắc cuộc sống</div>
-    <form method="post" action="/register">
+    <form method="post" action="/blog/register">
     
      <div th:if="${error}" style="color: red; text-align: center;">
     <p th:text="${error}"></p>
@@ -34,7 +34,7 @@
 </form>
 
 <div class="register">
-  <a href="/login">Đăng nhập</a>
+  <a href="/blog/login">Đăng nhập</a>
 </div>
   </div>
 </body>
