--- a/WebBlogCaNhan_Web2/src/main/resources/templates/views/createblog.html
+++ b/WebBlogCaNhan_Web2/src/main/resources/templates/views/createblog.html
@@ -39,13 +39,14 @@
 
   <select class="form-select" name="mode">
     <option value="" disabled selected>Trạng thái</option>
-    <option value="CONG_KHAI">Công khai</option>
-    <option value="RIENG_TU">Riêng tư</option>
+    <option value="cong_khai">Công khai</option>
+    <option value="rieng_tu">Riêng tư</option>
   </select>
+   <button class="btn-submit" type="submit">ĐĂNG BÀI</button>
  </div>
   <textarea class="form-content" rows="6" name="content" placeholder="Nhập nội dung..."></textarea>
 
-  <button class="btn-submit" type="submit">ĐĂNG BÀI</button>
+ 
 </form>
 
 
