--- a/WebBlogCaNhan_Web2/src/main/resources/templates/views/createblog.html
+++ b/WebBlogCaNhan_Web2/src/main/resources/templates/views/createblog.html
@@ -30,7 +30,7 @@
   <!-- Nội dung chính được gom trong 1 div nhỏ hơn -->
   <div class="content-wrapper">
   <form th:action="@{/blog/create}" method="post" class="post-form">
-  <input type="text" class="form-title" name="title" placeholder="Title" required/>
+  <input type="text" class="form-title" name="title" placeholder="Tiêu đề" required/>
 <div class="form-selects">
   <select class="form-select" name="categoryId" required>
     <option value="">Chủ đề</option>
