--- a/WebBlogCaNhan_Web2/src/main/resources/templates/layout/sidebar.html
+++ b/WebBlogCaNhan_Web2/src/main/resources/templates/layout/sidebar.html
@@ -8,7 +8,7 @@
 </button>
 
   <nav class="nav flex-column">
-    <a class="nav-link" href="#"><i class="fas fa-home"></i> Trang chủ</a>
+    <a class="nav-link" href="/blog/home"><i class="fas fa-home"></i> Trang chủ</a>
     <a class="nav-link" href="#"><i class="fa-solid fa-blog"></i> Blog của tôi</a>
    <a class="nav-link fw-bold text-dark" href="/blog/logout">
 	  <i class="fas fa-sign-out-alt"></i> Đăng xuất
