--- a/WebBlogCaNhan_Web2/src/main/resources/templates/views/myblog.html
+++ b/WebBlogCaNhan_Web2/src/main/resources/templates/views/myblog.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title th:text="${title}">Blog Admin</title>
+  <title th:text="${title}">My Blog</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Island+Moments&display=swap" rel="stylesheet">
@@ -24,24 +24,8 @@
 <div class="main-content" id="mainContent">
   <!-- Nội dung chính được gom trong 1 div nhỏ hơn -->
   <div class="content-wrapper">
-  <form class="search-bar" method="get" action="/blog/home">
-  <div class="search-input-wrapper">
-    <input type="text" name="keyword" th:value="${keyword}" placeholder="Nhập tiêu đề hoặc tên người dùng">
-    <button type="submit" class="search-icon">
-      <i class="fa-solid fa-magnifying-glass"></i>
-    </button>
-  </div>
-
-  <select class="btn-topic" name="category" onchange="this.form.submit()">
-    <option value="" th:selected="${selectedCategory == null}">Chủ đề</option>
-    <option th:each="cat : ${categories}" 
-            th:value="${cat.ID}" 
-            th:text="${cat.category_name}"
-            th:selected="${selectedCategory != null and selectedCategory == cat.ID}">
-    </option>
-  </select>
-</form>
-
+ 
+	<h1 class="page-title">Blog của tôi</h1>
     <div th:each="post : ${posts}" class="post-card">
       <div class="post-header">
         <span class="username" th:text="${post.user.username}">username</span>
@@ -50,13 +34,17 @@
       </div>
 
       <div class="post-title" th:text="${post.title}">Title</div>
+       <div class="post-actions">
+          <button class="btn-action btn-edit" title="Sửa">
+            <i class="fa-solid fa-pen-to-square"></i>
+          </button>
+          <button class="btn-action btn-delete" title="Xóa">
+            <i class="fa-solid fa-trash"></i>
+          </button>
+        </div>
+      </div>
     <div class="post-content" th:utext="${post.content}"></div>
 
-
-      <!-- Nếu có ảnh bạn cần thêm thuộc tính image trong Post -->
-      <!-- <div class="post-image">
-        <img th:src="@{${post.imageUrl}}" alt="post image">
-      </div> -->
 
       <div class="post-footer">
         <button class="btn-comment"><i class="fa-solid fa-comment"></i> Bình luận</button>
