--- a/WebBlogCaNhan_Web2/src/main/resources/templates/views/home.html
+++ b/WebBlogCaNhan_Web2/src/main/resources/templates/views/home.html
@@ -59,7 +59,7 @@
       </div> -->
 
       <div class="post-footer">
-        <button class="btn-comment"><i class="fa-solid fa-comment"></i> Bình luận</button>
+       <button class="btn btn-sm btn-secondary"><i class="fa-solid fa-comment"></i> Bình luận</button>
       </div>
     </div>
   </div>
