--- a/WebBlogCaNhan_Web2/src/main/resources/templates/views/home.html
+++ b/WebBlogCaNhan_Web2/src/main/resources/templates/views/home.html
@@ -43,6 +43,8 @@
 </form>
 
     <div th:each="post : ${posts}" th:attr="id='post-' + ${post.ID}" class="post-card">
+    
+    
       <div class="post-header">
         <span class="username">
   <i class="fa-regular fa-user"></i> 
@@ -61,7 +63,21 @@
 
       </div>
 
-      <div class="post-title" th:text="${post.title}">Title</div>
+      <div class="d-flex justify-content-between align-items-center">
+    <div class="post-title" th:text="${post.title}">Title</div>
+    
+    <div th:if="${post.user.username == currentUsername}" class="post-actions">
+      <a th:href="@{'/myblog/edit/' + ${post.ID}}" class="btn btn-sm btn-outline-primary me-2" title="Sửa">
+        <i class="fa-solid fa-pen-to-square"></i>
+      </a>
+
+      <button class="btn btn-sm btn-outline-danger" title="Xóa"
+              th:onclick="'if(confirm(\'Bạn có chắc muốn xóa?\')) window.location.href=\'' + @{/myblog/delete/{id}(id=${post.ID})} + '\''">
+        <i class="fa-solid fa-trash"></i>
+      </button>
+    </div>
+  </div>
+      
     <div class="post-content">
   <div class="content-preview" th:utext="${post.content}"></div>
   <button class="btn btn-link p-0 see-more-btn">Xem thêm...</button>
