--- a/WebBlogCaNhan_Web2/src/main/resources/templates/views/login.html
+++ b/WebBlogCaNhan_Web2/src/main/resources/templates/views/login.html
@@ -31,7 +31,7 @@
 		</span>
       </div>
       <div class="forgot-password">
-        <a href="/blog/change-password" aria-label="Quên mật khẩu">Quên mật khẩu ?</a>
+        <a href="/blog/change-password" aria-label="Quên mật khẩu">Đổi mật khẩu ?</a>
       </div>
       <button type="submit" class="btn-login" aria-label="Đăng nhập">Đăng nhập</button>
     </form>
