--- a/WebBlogCaNhan_Web2/src/main/resources/templates/views/forgotpassword.html
+++ b/WebBlogCaNhan_Web2/src/main/resources/templates/views/forgotpassword.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Đổi Mật Khẩu</title>
+<title>Change Password</title>
 <link rel="stylesheet" href="/css/login.css" />
 <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
